# high-signal

./: .env.example  .gitignore  .prettierrc  .saasmaker.json  README.md  SPEC.md  agents.md  design.html  eslint.config.js  foundry.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: backfill.yml  ci.yml  cron-ingest.yml  cron-markets.yml  cron-score.yml  deploy-api.yml  deploy-web.yml  weekly.yml
.omx/: metrics.json
.omx/logs/: omx-2026-04-25.jsonl  (+2 more)
.tmp/: seed.sql
docs/: cf-access-setup.md
plans/: 0001-research-artifact-first.md  0002-auth-hardening.md  0003-multi-collection-for-everythingrated.md  0004-platform-consolidation.md  0005-legacy-extraction-ledger.md
python/ingest/: .gitignore  README.md  conftest.py  modal_app.py  pyproject.toml
python/ingest/src/high_signal_ingest/: __init__.py  audit.py  backfill.py  generator.py  graph.py  pipeline.py  preflight.py  types.py  writer.py
python/ingest/src/high_signal_ingest/extract/: entities.py  relations.py
python/ingest/src/high_signal_ingest/score/: backtest.py  runner.py  sentiment.py
python/ingest/src/high_signal_ingest/seed/: __init__.py  ai_infra_entities.csv  relationships.csv  signal_types.yaml  sources.yaml
python/ingest/src/high_signal_ingest/sources/: edgar.py  gdelt.py  github.py  gov.py  hkex.py  ir.py  markets.py  news.py  reddit.py  youtube.py
python/ingest/tests/: test_graph.py  test_news_source.py  test_pipeline_contracts.py  test_seed.py
research/: market-and-oss.md
scripts/: seed-d1.ts  sync-signals.ts
signals/: README.md
(+81 files in other folders)
